--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
+    "react-tooltip": "^4.2.8",
     "recharts": "^1.6.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
