--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^16.8.4",
     "@walletconnect/qrcode-modal": "^1.0.0-beta.47",
     "@walletconnect/web3-provider": "^1.0.0-beta.47",
+    "@myetherwallet/mewconnect-web-client": "2.1.2",
     "antd": "4.1.0",
     "antd-dayjs-webpack-plugin": "1.0.0",
     "async-validator": "3.3.0",
