--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "@myetherwallet/mewconnect-web-client": "2.1.4",
     "@types/node": "^14.0.5",
     "@types/react": "^16.8.22",
     "@types/react-dom": "^16.8.4",
     "@walletconnect/qrcode-modal": "^1.0.0-beta.47",
     "@walletconnect/web3-provider": "^1.0.0-beta.47",
-    "@myetherwallet/mewconnect-web-client": "2.1.4",
     "antd": "4.1.0",
     "antd-dayjs-webpack-plugin": "1.0.0",
     "async-validator": "3.3.0",
+    "authereum": "^0.0.4-beta.193",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.0",
     "bignumber.js": "9.0.0",
