--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "antd": "4.1.0",
     "antd-dayjs-webpack-plugin": "1.0.0",
     "async-validator": "3.3.0",
-    "authereum": "^0.0.4-beta.193",
+    "authereum": "^0.1.0",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.0",
     "bignumber.js": "9.0.0",
